minor fixes
Minor fixes added